--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <body>
     <div class="container">
       <div class="form-container">
-        <h2 class="text-center">Contact Us</h2>
+        <h2 class="mb-3">Contact Us</h2>
         <form action="" id="contactForm" aria-labelledby="contactFormLabel">
           <!-- name is there -->
           <div class="name">
